# lvyou

./: .dockerignore  .env.example  .gitignore  .prettierignore  DESIGN_SPEC.md  README.md  docker-compose.yml  eslint.config.js  nginx.conf  package-lock.json
src/: App.tsx  router.tsx
src/hooks/: useTravel.ts
src/pages/: Attractions.tsx  Home.tsx  InfoCollection.tsx  OrderConfirm.tsx  PlanDetail.tsx  PlanDisplay.tsx
src/services/: authService.ts  (+1 more)
tests/: basic.test.ts
travel-assistant/: .gitignore  README.md  docker-compose.yml  pom.xml
travel-assistant-agent/: .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  verify_setup.sh
travel-assistant-agent/src/: config.py  main.py
travel-assistant-agent/src/agents/: __init__.py  base.py  booking.py  info_collection.py  mcp_client.py  recommendation.py  search.py  skill_agent.py
travel-assistant-agent/src/mcp_server/: README.md  __init__.py  config.py  server.py
travel-assistant-agent/src/mcp_server/skills/: __init__.py  base_skill.py  destination.py  planning.py  pricing.py  reviews.py  weather.py
travel-assistant-agent/src/models/: schemas.py
travel-assistant-agent/src/tools/: __init__.py  mcp_tools.py
travel-assistant-agent/src/utils/: api_client.py  claude.py  db.py  deepagent.py  logger.py
travel-assistant-agent/src/workflows/: __init__.py  planning_workflow.py
travel-assistant-agent/tests/: test_health.py
travel-assistant-front/: Dockerfile  README.md  index.html  package.json  tailwind.config.js  vite.config.ts
(+96 files in other folders)
