[project]
name = "travel-assistant-agent"
version = "0.1.0"
description = "AI Travel Assistant Agent Service powered by FastAPI, LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.26.0",
  "tenacity>=8.2.3",
  "loguru>=0.7.2",
  "python-multipart>=0.0.6",

  "langchain>=1.0.0",
  "langchain-core>=1.0.0",
  "langchain-anthropic>=1.0.0",
  "langgraph>=1.0.0",

  "anthropic>=0.8.0",

  "psycopg2-binary>=2.9.9",
  "sqlalchemy>=2.0.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.3",
  "pytest-asyncio>=0.21.1",
  "pytest-cov>=4.1.0",
  "black>=23.12.1",
  "ruff>=0.1.9",
  "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
